--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Source: anon-ws-disable-stacked-tor
 Section: misc
 Priority: optional
 Maintainer: Patrick Schleizer <adrelanos@riseup.net>
-Build-Depends: debhelper (>= 8), faketime, git, config-package-dev (>= 5.1)
+Build-Depends: debhelper (>= 8), faketime, config-package-dev (>= 5.1)
 Homepage: https://github.com/Whonix/anon-ws-disable-stacked-tor
 Vcs-Browser: https://github.com/Whonix/anon-ws-disable-stacked-tor
 Vcs-Git: https://github.com/Whonix/anon-ws-disable-stacked-tor.git
