added Tor's init script in an attempt to fix "anon-ws-disable-stacked-tor breaks installation of onioncat due to missing sysvinit script" - https://phabricator.whonix.org/T5

--- a/debian/rules
+++ b/debian/rules
@@ -9,5 +9,8 @@
 %:
 	dh $@ --with=config-package
 
+override_dh_install:
+	dh_installinit --onlyscripts --name tor.anondist
+
 override_dh_installchangelogs:
 	dh_installchangelogs changelog.upstream upstream
