--- a/debian/rules
+++ b/debian/rules
@@ -11,7 +11,7 @@
 
 override_dh_install:
 	dh_configpackage
-	dh_installinit --onlyscripts --name tor.anondist
+	dh_installinit --onlyscripts --name tor
 
 override_dh_installchangelogs:
 	dh_installchangelogs changelog.upstream upstream
