--- a/lib/systemd/system/tor.service.d/50_anon_ws_disable_stacked_tor.conf
+++ b/lib/systemd/system/tor.service.d/50_anon_ws_disable_stacked_tor.conf
@@ -5,3 +5,10 @@
 [Service]
 ## Make 'sudo service tor status' exit '0' for better compatibility.
 RemainAfterExit=yes
+
+[Unit]
+## Qubes-Whonix:
+## Clear 'ConditionPathExists=/var/run/qubes-service/whonix-gateway' set by
+## the qubes-whonix package, which is useful on the gateway but not on the
+## workstation.
+ConditionPathExists=
