--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,8 @@ Package: anon-ws-disable-stacked-tor
 Provides: tor, ${diverted-files}
 Conflicts: ${diverted-files}
 Architecture: all
-Depends: procps, socat, anon-shared-helper-scripts, ${misc:Depends}
+## anon-base-files provides user 'user'.
+Depends: procps, socat, anon-shared-helper-scripts, anon-base-files, ${misc:Depends}
 Description: Prevents Tor over Tor in Anonymity Distribution Workstations
  Supposed to be installed on Workstations, which prevents installing the real
  Tor package from upstream (ex: Debian, The Tor Project) APT repositories. Its
