--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -11,7 +11,18 @@
 ## /usr/lib/anon-ws-disable-stacked-tor/socat-unix-sockets
 ## Start and stop is up to the anon-ws-disable-stacked-tor systemd service.
 
+## Usage:
+## sudo service anon-ws-disable-stacked-tor stop
+## sudo service anon-ws-disable-stacked-tor start
+## sudo service anon-ws-disable-stacked-tor restart
+## sudo service anon-ws-disable-stacked-tor status
+
 ## bash fragment
+
+## Cleanup eventual stale files.
+rm --force --verbose /var/run/anon-ws-disable-stacked-tor/* 2>/dev/null || true
+rm --force --verbose /var/run/tor/control_auth_cookie 2>/dev/null || true
+rm --force --verbose /var/run/tor/control.authcookie 2>/dev/null || true
 
 ## SocksPorts
 ## Tor's default port
@@ -23,7 +34,8 @@ socat TCP-LISTEN:11109,fork TCP:$GATEWAY_IP:9119 &
 ## Tor Messenger's default port
 socat TCP-LISTEN:9152,fork TCP:$GATEWAY_IP:9152 &
 
-## ControlPorts
+## ControlPorts TCP sockets
+##
 ## Control Port Filter Proxy is running on Gateway's Port 9052
 ## Tor's default port
 socat TCP-LISTEN:9051,fork TCP:$GATEWAY_IP:9052 &
@@ -32,12 +44,28 @@ socat TCP-LISTEN:9151,fork TCP:$GATEWAY_IP:9052 &
 ## Tor Messenger's default port
 socat TCP-LISTEN:9153,fork TCP:$GATEWAY_IP:9052 &
 
+## ControlPorts unix domain sockets
+##
+mkdir --parents /var/run/tor
+mkdir --parents /var/lib/tor
+chown --recursive debian-tor:debian-tor /var/run/tor
+chown --recursive debian-tor:debian-tor /var/lib/tor
+## tor-firejail uses '/var/run/tor/control_auth_cookie'.
+## https://git.schwanenlied.me/yawning/tor-firejail/src/master/start-tor-browser
+## https://lists.torproject.org/pipermail/tor-dev/2016-July/011226.html
+## https://lists.torproject.org/pipermail/tor-dev/2016-July/011227.html
+socat -t100 UNIX-LISTEN:/var/run/tor/control_auth_cookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
+## Tor by default uses '/var/lib/tor/control_auth_cookie'.
+## https://trac.torproject.org/projects/tor/ticket/19572
+socat -t100 UNIX-LISTEN:/var/lib/tor/control_auth_cookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
+## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control.authcookie'.
+socat -t100 UNIX-LISTEN:/var/run/tor/control.authcookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
+
 ## Create a unix domain socket files such as
 ## /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock and forward those
 ## to 127.0.0.1:9150 etc. from where rinetd accepts it and forwards it to the
 ## gateway. See also:
 ## https://phabricator.whonix.org/T192
-
 socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9050 &
 socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9150 &
 socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_11109.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:11109 &
