--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -48,8 +48,11 @@ socat TCP-LISTEN:9153,fork TCP:$GATEWAY_IP:9052 &
 ##
 mkdir --parents /var/run/tor
 mkdir --parents /var/lib/tor
-chown --recursive debian-tor:debian-tor /var/run/tor
 chown --recursive debian-tor:debian-tor /var/lib/tor
+chmod --recursive 02700 /var/lib/tor
+chown --recursive debian-tor:debian-tor /var/run/tor
+chmod --recursive 02750 /var/run/tor
+
 ## tor-firejail uses '/var/run/tor/control_auth_cookie'.
 ## https://git.schwanenlied.me/yawning/tor-firejail/src/master/start-tor-browser
 ## https://lists.torproject.org/pipermail/tor-dev/2016-July/011226.html
