--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -20,7 +20,7 @@
 ## bash fragment
 
 ## Cleanup eventual stale files.
-rm --force --verbose /var/run/anon-ws-disable-stacked-tor/* 2>/dev/null || true
+rm --force --verbose /var/run/anon-ws-disable-stacked-tor/*.sock 2>/dev/null || true
 rm --force --verbose /var/run/tor/control_auth_cookie 2>/dev/null || true
 rm --force --verbose /var/run/tor/control.authcookie 2>/dev/null || true
 
