also use Wants=network.target

--- a/lib/systemd/system/anon-ws-disable-stacked-tor.service
+++ b/lib/systemd/system/anon-ws-disable-stacked-tor.service
@@ -5,7 +5,9 @@
 [Unit]
 Description=anon-ws-disable-stacked-tor
 Documentation=https://www.whonix.org/wiki/Dev/anon-ws-disable-stacked-tor
+
 After=network.target
+Wants=network.target
 
 [Service]
 Type=simple
