--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -66,7 +66,7 @@ socat -t100 UNIX-LISTEN:/var/run/tor/control.authcookie,mode=777,reuseaddr,fork 
 
 ## Create a unix domain socket files such as
 ## /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock and forward those
-## to 127.0.0.1:9150 etc. from where rinetd accepts it and forwards it to the
+## to 127.0.0.1:9150 etc. from where socat accepts it and forwards it to the
 ## gateway. See also:
 ## https://phabricator.whonix.org/T192
 socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9050 &
