forward /var/run/tor/socks to Whonix-Gateway

--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -23,6 +23,7 @@
 rm --force --verbose /var/run/anon-ws-disable-stacked-tor/*.sock 2>/dev/null || true
 rm --force --verbose /var/run/tor/control_auth_cookie 2>/dev/null || true
 rm --force --verbose /var/run/tor/control.authcookie 2>/dev/null || true
+rm --force --verbose /var/run/tor/socks 2>/dev/null || true
 
 ## SocksPorts
 ## Tor's default port
@@ -76,6 +77,8 @@ socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock
 socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9051 &
 socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9151 &
 socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9153 &
+
+socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork TCP4:127.0.0.1:9050 &
 
 ## To test this, you could use:
 ## socat - UNIX-CONNECT:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock
