--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -91,4 +91,7 @@ $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork 
 
 ## To test this, you could use:
 ## sudo --non-interactive -u debian-tor socat - UNIX-CONNECT:/var/run/tor/socks
+## Then type:
 ## GET
+## <enter>
+## The expected reply includes 'Tor is not an HTTP Proxy'.
