fix, make sure /var/run/anon-ws-disable-stacked-tor exists

--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -53,13 +53,18 @@ $pre_command socat TCP-LISTEN:9151,fork TCP:$GATEWAY_IP:9052 &
 $pre_command socat TCP-LISTEN:9153,fork TCP:$GATEWAY_IP:9052 &
 
 ## ControlPorts unix domain sockets
-##
 mkdir --parents /var/run/tor
 mkdir --parents /var/lib/tor
+mkdir --parents /var/run/anon-ws-disable-stacked-tor/
+
 chown --recursive debian-tor:debian-tor /var/lib/tor
 chmod --recursive 777 /var/lib/tor
+
 chown --recursive debian-tor:debian-tor /var/run/tor
 chmod --recursive 777 /var/run/tor
+
+chown --recursive debian-tor:debian-tor /var/run/anon-ws-disable-stacked-tor
+chmod --recursive 777 /var/run/anon-ws-disable-stacked-tor
 
 ## tor-firejail uses '/var/run/tor/control_auth_cookie'.
 ## https://git.schwanenlied.me/yawning/tor-firejail/src/master/start-tor-browser
