also create and forward /var/run/tor/control

--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -23,6 +23,7 @@
 
 ## Cleanup eventual stale files.
 rm --force --verbose /var/run/anon-ws-disable-stacked-tor/*.sock 2>/dev/null || true
+rm --force --verbose /var/run/tor/control 2>/dev/null || true
 rm --force --verbose /var/run/tor/control_auth_cookie 2>/dev/null || true
 rm --force --verbose /var/run/tor/control.authcookie 2>/dev/null || true
 rm --force --verbose /var/run/tor/socks 2>/dev/null || true
@@ -75,6 +76,9 @@ $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control_auth_cookie,mode=777,r
 ## Tor by default uses '/var/lib/tor/control_auth_cookie'.
 ## https://trac.torproject.org/projects/tor/ticket/19572
 $pre_command socat -t100 UNIX-LISTEN:/var/lib/tor/control_auth_cookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
+
+## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control'.
+$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
 
 ## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control.authcookie'.
 $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control.authcookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
