add support for python-stem Tor Control Socket based authentication
by adding a functional /var/run/tor/control.authcookie

--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -25,7 +25,6 @@
 rm --force --verbose /var/run/anon-ws-disable-stacked-tor/*.sock 2>/dev/null || true
 rm --force --verbose /var/run/tor/control 2>/dev/null || true
 rm --force --verbose /var/run/tor/control_auth_cookie 2>/dev/null || true
-rm --force --verbose /var/run/tor/control.authcookie 2>/dev/null || true
 rm --force --verbose /var/run/tor/socks 2>/dev/null || true
 
 ## SocksPorts
@@ -58,6 +57,8 @@ mkdir --parents /var/run/tor
 mkdir --parents /var/lib/tor
 mkdir --parents /var/run/anon-ws-disable-stacked-tor/
 
+cp /usr/share/anon-ws-disable-stacked-tor/control.authcookie /var/run/tor/control.authcookie
+
 chown --recursive debian-tor:debian-tor /var/lib/tor
 chmod --recursive 777 /var/lib/tor
 
@@ -79,9 +80,6 @@ $pre_command socat -t100 UNIX-LISTEN:/var/lib/tor/control_auth_cookie,mode=777,r
 
 ## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control'.
 $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
-
-## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control.authcookie'.
-$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control.authcookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
 
 ## Create a unix domain socket files such as
 ## /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock and forward those
