--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -52,12 +52,24 @@ $pre_command socat TCP-LISTEN:9151,fork TCP:$GATEWAY_IP:9052 &
 ## Tor Messenger's default port
 $pre_command socat TCP-LISTEN:9153,fork TCP:$GATEWAY_IP:9052 &
 
-## ControlPorts unix domain sockets
+## Tor Control Auth Cookie Files
+
 mkdir --parents /var/run/tor
 mkdir --parents /var/lib/tor
-mkdir --parents /var/run/anon-ws-disable-stacked-tor/
+mkdir --parents /var/run/anon-ws-disable-stacked-tor
 
+## Debian by default uses '/var/run/tor/control.authcookie'.
 cp /usr/share/anon-ws-disable-stacked-tor/control.authcookie /var/run/tor/control.authcookie
+
+## tor-firejail uses '/var/run/tor/control_auth_cookie'.
+## https://git.schwanenlied.me/yawning/tor-firejail/src/master/start-tor-browser
+## https://lists.torproject.org/pipermail/tor-dev/2016-July/011226.html
+## https://lists.torproject.org/pipermail/tor-dev/2016-July/011227.html
+cp /usr/share/anon-ws-disable-stacked-tor/control.authcookie /var/run/tor/control_auth_cookie
+
+## Tor by default uses '/var/lib/tor/control_auth_cookie'.
+## https://trac.torproject.org/projects/tor/ticket/19572
+cp /usr/share/anon-ws-disable-stacked-tor/control.authcookie /var/lib/tor/control_auth_cookie
 
 chown --recursive debian-tor:debian-tor /var/lib/tor
 chmod --recursive 777 /var/lib/tor
@@ -68,15 +80,7 @@ chmod --recursive 777 /var/run/tor
 chown --recursive debian-tor:debian-tor /var/run/anon-ws-disable-stacked-tor
 chmod --recursive 777 /var/run/anon-ws-disable-stacked-tor
 
-## tor-firejail uses '/var/run/tor/control_auth_cookie'.
-## https://git.schwanenlied.me/yawning/tor-firejail/src/master/start-tor-browser
-## https://lists.torproject.org/pipermail/tor-dev/2016-July/011226.html
-## https://lists.torproject.org/pipermail/tor-dev/2016-July/011227.html
-$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control_auth_cookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
-
-## Tor by default uses '/var/lib/tor/control_auth_cookie'.
-## https://trac.torproject.org/projects/tor/ticket/19572
-$pre_command socat -t100 UNIX-LISTEN:/var/lib/tor/control_auth_cookie,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
+## ControlPorts unix domain sockets
 
 ## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control'.
 $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
