socat listen on localhost only
https://forums.whonix.org/t/tor-browser-6-5a4-connectivity-broken-blocked-by-apparmor-profile-since-tbb-changed-to-sockssocket/3154/16?u=patrick

--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -28,28 +28,28 @@ rm --force --verbose /var/run/tor/socks 2>/dev/null || true
 
 ## SocksPorts
 ## Tor's default port
-$pre_command socat TCP-LISTEN:9050,fork TCP:$GATEWAY_IP:9050 &
+$pre_command socat TCP-LISTEN:9050,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9050 &
 
 ## Tor Browser Bundle's default port
-$pre_command socat TCP-LISTEN:9150,fork TCP:$GATEWAY_IP:9150 &
+$pre_command socat TCP-LISTEN:9150,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9150 &
 
 ## TorChat's default port
-$pre_command socat TCP-LISTEN:11109,fork TCP:$GATEWAY_IP:9119 &
+$pre_command socat TCP-LISTEN:11109,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9119 &
 
 ## Tor Messenger's default port
-$pre_command socat TCP-LISTEN:9152,fork TCP:$GATEWAY_IP:9152 &
+$pre_command socat TCP-LISTEN:9152,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9152 &
 
 ## ControlPorts TCP sockets
 ##
 ## Control Port Filter Proxy is running on Gateway's Port 9052
 ## Tor's default port
-$pre_command socat TCP-LISTEN:9051,fork TCP:$GATEWAY_IP:9052 &
+$pre_command socat TCP-LISTEN:9051,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9052 &
 
 ## Tor Browser Bundle's default port
-$pre_command socat TCP-LISTEN:9151,fork TCP:$GATEWAY_IP:9052 &
+$pre_command socat TCP-LISTEN:9151,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9052 &
 
 ## Tor Messenger's default port
-$pre_command socat TCP-LISTEN:9153,fork TCP:$GATEWAY_IP:9052 &
+$pre_command socat TCP-LISTEN:9153,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9052 &
 
 ## Tor Control Auth Cookie Files
 
