--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -82,22 +82,22 @@ chmod --recursive 777 /var/run/anon-ws-disable-stacked-tor
 ## ControlPorts unix domain sockets
 
 ## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control'.
-$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP4:$GATEWAY_IP:9052 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9052 &
 
 ## Create a unix domain socket files such as
 ## /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock and forward those
 ## to 127.0.0.1:9150 etc. from where socat accepts it and forwards it to the
 ## gateway. See also:
 ## https://phabricator.whonix.org/T192
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9050 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9150 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_11109.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:11109 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9152 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9051 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9151 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock,mode=777,reuseaddr,fork TCP4:127.0.0.1:9153 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9050 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9150 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_11109.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:11109 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9152 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9051 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9151 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9153 &
 
-$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork TCP4:127.0.0.1:9050 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork TCP:127.0.0.1:9050 &
 
 ## To test this, you could use:
 ## sudo --non-interactive -u debian-tor socat - UNIX-CONNECT:/var/run/tor/socks
