--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -26,47 +26,49 @@ rm --force --verbose /var/run/anon-ws-disable-stacked-tor/*.sock 2>/dev/null || 
 rm --force --verbose /var/run/tor/control 2>/dev/null || true
 rm --force --verbose /var/run/tor/socks 2>/dev/null || true
 
-## SocksPorts
-## Tor's default port
+############
+## Tor SocksPorts #
+############
+
+## system Tor default SocksPort
 $pre_command socat TCP-LISTEN:9050,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9050 &
 
-## Tor Browser Bundle's default port
+## Tor Browser Bundle default SocksPort
 $pre_command socat TCP-LISTEN:9150,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9150 &
 
-## TorChat's default port
+## TorChat default SocksPort
 $pre_command socat TCP-LISTEN:11109,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9119 &
 
-## Tor Messenger's default port
+## Tor Messenger default SocksPort
 $pre_command socat TCP-LISTEN:9152,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9152 &
 
-## ControlPorts TCP sockets
-##
-## Control Port Filter Proxy is running on Gateway's Port 9051
-## Tor's default port
+## Tor default ControlPort
 $pre_command socat TCP-LISTEN:9051,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9051 &
 
-## Tor Browser Bundle's default port
+## Tor Browser Bundle default ControlPort
 $pre_command socat TCP-LISTEN:9151,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9051 &
 
-## Tor Messenger's default port
+## Tor Messenger default ControlPort
 $pre_command socat TCP-LISTEN:9153,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9051 &
 
-## Tor Control Auth Cookie Files
+#####################
+## Tor Control Auth Cookie Files #
+#####################
 
 mkdir --parents /var/run/tor
 mkdir --parents /var/lib/tor
 mkdir --parents /var/run/anon-ws-disable-stacked-tor
 
-## Debian by default uses '/var/run/tor/control.authcookie'.
+## system Tor default '/var/run/tor/control.authcookie' auth cookie file
 cp /usr/share/anon-ws-disable-stacked-tor/control.authcookie /var/run/tor/control.authcookie
 
-## tor-firejail uses '/var/run/tor/control_auth_cookie'.
+## tor-firejail uses '/var/run/tor/control_auth_cookie' auth cookie file
 ## https://git.schwanenlied.me/yawning/tor-firejail/src/master/start-tor-browser
 ## https://lists.torproject.org/pipermail/tor-dev/2016-July/011226.html
 ## https://lists.torproject.org/pipermail/tor-dev/2016-July/011227.html
 cp /usr/share/anon-ws-disable-stacked-tor/control.authcookie /var/run/tor/control_auth_cookie
 
-## Tor by default uses '/var/lib/tor/control_auth_cookie'.
+## Tor by default uses '/var/lib/tor/control_auth_cookie' auth cookie file
 ## https://trac.torproject.org/projects/tor/ticket/19572
 cp /usr/share/anon-ws-disable-stacked-tor/control.authcookie /var/lib/tor/control_auth_cookie
 
@@ -79,7 +81,9 @@ chmod --recursive 777 /var/run/tor
 chown --recursive debian-tor:debian-tor /var/run/anon-ws-disable-stacked-tor
 chmod --recursive 777 /var/run/anon-ws-disable-stacked-tor
 
-## ControlPorts unix domain sockets
+########################
+## ControlPorts unix domain sockets #
+########################
 
 ## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control'.
 $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9051 &
