--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -42,6 +42,10 @@ $pre_command socat TCP-LISTEN:11109,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9119 &
 ## Tor Messenger default SocksPort
 $pre_command socat TCP-LISTEN:9152,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9152 &
 
+##############
+## Tor ControlPorts #
+##############
+
 ## Tor default ControlPort
 $pre_command socat TCP-LISTEN:9051,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9051 &
 
