--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -19,6 +19,10 @@
 
 ## bash fragment
 
+###########
+## Preparation #
+###########
+
 [ -n "$pre_command" ] || pre_command="sudo --non-interactive -u debian-tor"
 
 ## Cleanup eventual stale files.
@@ -89,7 +93,7 @@ chmod --recursive 777 /var/run/anon-ws-disable-stacked-tor
 ## ControlPorts unix domain sockets #
 ########################
 
-## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control'.
+## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control' Tor ControlSocket
 $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9051 &
 
 ## Create a unix domain socket files such as
@@ -105,7 +109,12 @@ $pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.
 $pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9151 &
 $pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9153 &
 
+## system Tor default SocksSocket
 $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork TCP:127.0.0.1:9050 &
+
+#######
+## Test #
+#######
 
 ## To test this, you could use:
 ## sudo --non-interactive -u debian-tor socat - UNIX-CONNECT:/var/run/tor/socks
