--- a/lib/systemd/system/tor@default.service.d/51_anon_ws_disable_stacked_tor.conf
+++ b/lib/systemd/system/tor@default.service.d/51_anon_ws_disable_stacked_tor.conf
@@ -1,6 +1,16 @@
 ## This file is part of Whonix.
-## Copyright (C) 2012 - 2014 Patrick Schleizer <adrelanos@riseup.net>
+## Copyright (C) 2017 - 2017 Patrick Schleizer <adrelanos@riseup.net>
 ## See the file COPYING for copying conditions.
 
+[Unit]
+Description=anon-ws-disable-stacked-tor
+Documentation=https://www.whonix.org/wiki/Dev/anon-ws-disable-stacked-tor
+
 [Service]
+Type=simple
+NotifyAccess=
+PIDFile=
+ExecStartPre=
+ExecReload=
 AppArmorProfile=
+KillSignal=SIGTERM
