--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -18,37 +18,18 @@
 
 ## bash fragment
 
-################
-## Preparation #
-################
-
 [ -n "$pre_command" ] || pre_command="sudo --non-interactive -u debian-tor"
 
-###################
-## Tor SocksPorts #
-###################
+port_list+=" 9050 " ## system Tor default SocksPort
+port_list+=" 9150 " ## Tor Browser Bundle default SocksPort
+port_list+=" 9152 " ## Tor Messenger default SocksPort
+port_list+=" 9051 " ## Tor default ControlPort
+port_list+=" 9151 " ## Tor Browser Bundle default ControlPort
+port_list+=" 9153 " ## Tor Messenger default ControlPort
 
-## system Tor default SocksPort
-$pre_command socat TCP-LISTEN:9050,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9050 &
-
-## Tor Browser Bundle default SocksPort
-$pre_command socat TCP-LISTEN:9150,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9150 &
-
-## Tor Messenger default SocksPort
-$pre_command socat TCP-LISTEN:9152,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9152 &
-
-#####################
-## Tor ControlPorts #
-#####################
-
-## Tor default ControlPort
-$pre_command socat TCP-LISTEN:9051,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9051 &
-
-## Tor Browser Bundle default ControlPort
-$pre_command socat TCP-LISTEN:9151,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9051 &
-
-## Tor Messenger default ControlPort
-$pre_command socat TCP-LISTEN:9153,fork,bind=127.0.0.1 TCP:$GATEWAY_IP:9051 &
+for single_port in $port_list ; do
+   $pre_command socat TCP-LISTEN:"$single_port",fork,bind=127.0.0.1 TCP:$GATEWAY_IP:"$single_port" &
+done
 
 #####################################
 ## ControlPorts unix domain sockets #
@@ -59,19 +40,18 @@ $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,for
 
 ## Create a unix domain socket files such as
 ## /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock and forward those
-## to 127.0.0.1:9150 etc. from where socat accepts it and forwards it to the
-## gateway. See also:
+## to $GATEWAY_IP:9150 etc. See also:
 ## https://phabricator.whonix.org/T192
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9050 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9150 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_11109.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:11109 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9152 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9051 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9151 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock,mode=777,reuseaddr,fork TCP:127.0.0.1:9153 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9050 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9150 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_11109.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:11109 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9152 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9051 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9151 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9153 &
 
 ## system Tor default SocksSocket
-$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork TCP:127.0.0.1:9050 &
+$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9050 &
 
 #########
 ## Test #
