--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -31,31 +31,35 @@ for single_port in $port_list ; do
    $pre_command socat TCP-LISTEN:"$single_port",fork,bind=127.0.0.1 TCP:$GATEWAY_IP:"$single_port" &
 done
 
-#####################################
-## ControlPorts unix domain sockets #
-#####################################
-
-## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control' Tor ControlSocket
-$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9051 &
-
 ## Create a unix domain socket files such as
 ## /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock and forward those
 ## to $GATEWAY_IP:9150 etc. See also:
 ## https://phabricator.whonix.org/T192
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9050 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9150 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_11109.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:11109 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9152 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9051 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9151 &
-$pre_command socat -t100 UNIX-LISTEN:/var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9153 &
+
+file_list+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock "
+file_list+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock "
+file_list+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_11109.sock "
+file_list+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock "
+file_list+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock "
+file_list+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock "
+file_list+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock "
+
+for file_item in $file_list ; do
+   ## example: 127.0.0.1_9050.sock
+   file_basename="${file_item##*/}"
+   ## example: 127.0.0.1_9050
+   file_without_extension="${file_basename%.*}"
+   ## example: 9050
+   port="${file_without_extension##*_}"
+
+   $pre_command socat -t100 UNIX-LISTEN:"$file_item",mode=777,reuseaddr,fork TCP:$GATEWAY_IP:"$port" &
+done
 
 ## system Tor default SocksSocket
 $pre_command socat -t100 UNIX-LISTEN:/var/run/tor/socks,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9050 &
 
-#########
-## Test #
-#########
+## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control' Tor ControlSocket
+$pre_command socat -t100 UNIX-LISTEN:/var/run/tor/control,mode=777,reuseaddr,fork TCP:$GATEWAY_IP:9051 &
 
 ## To test this, you could use:
 ## sudo --non-interactive -u debian-tor socat - UNIX-CONNECT:/var/run/tor/socks
