--- a/lib/systemd/system/anon-ws-disable-stacked-tor.service
+++ b/lib/systemd/system/anon-ws-disable-stacked-tor.service
@@ -14,7 +14,8 @@ Type=simple
 Restart=always
 TimeoutSec=30
 KillMode=control-group
-SuccessExitStatus=143
+SuccessExitStatus=143 125
+RestartPreventExitStatus=125
 PermissionsStartOnly=true
 ExecStartPre=/usr/lib/anon-ws-disable-stacked-tor/state-files
 User=debian-tor
