add config parsing

--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -6,8 +6,49 @@
 ## When anon-ws-disable-stacked-tor is updated, this file may be overwritten
 
 ## Do not try to execute this file. Files in folder /etc/anon-ws-disable-stacked-tor.d
-## are `source`d in lexical order by the anon-ws-disable-stacked-tor package by script:
-## /usr/lib/anon-ws-disable-stacked-tor/socat-unix-sockets
+## are `source`d in lexical order by the anon-ws-disable-stacked-tor package.
+
+## bash fragment
+
+################################
+# systemd-unit-files-generator #
+################################
+
+## /usr/share/anon-ws-disable-stacked-tor/systemd-unit-files-generator parses this.
+
+## Redirect Whonix-Workstation port 9050 to Whonix-Gateway port 9050 and so forth.
+file_port_tuples+=" port#9050:9050 " ## system Tor default SocksPort
+file_port_tuples+=" port#9150:9151 " ## Tor Browser Bundle default SocksPort
+file_port_tuples+=" port#9152:9152 " ## Tor Messenger default SocksPort
+file_port_tuples+=" port#9051:9051 " ## Tor default ControlPort
+file_port_tuples+=" port#9151:9051 " ## Tor Browser Bundle default ControlPort
+file_port_tuples+=" port#9153:9051 " ## Tor Messenger default ControlPort
+file_port_tuples+=" port#11109:9119 " ## TorChat default SocksPort
+
+## Create a unix domain socket files such as
+## /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock and forward those
+## to $GATEWAY_IP:9150 etc. See also:
+## https://phabricator.whonix.org/T192
+file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9050.sock#9050 "
+file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9150.sock#9150 "
+file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9152.sock#9152 "
+file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9051.sock#9051 "
+file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9151.sock#9051 "
+file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_9153.sock#9051 "
+
+## system Tor default SocksSocket is /var/run/tor/socks
+## redirect Whonix-Workstation unix domain socket file /var/run/tor/socks to Whonix-Gateway port 9050
+file_port_tuples+=" /var/run/tor/socks#9050 "
+
+## Debian /usr/share/tor/tor-service-defaults-torrc uses '/var/run/tor/control' Tor ControlSocket
+## Redirect Whonix-Workstation unix domain socket file /var/run/tor/control to Whonix-Gateway port 9051
+file_port_tuples+=" /var/run/tor/control#9051 "
+
+######################
+# socat-unix-sockets #
+######################
+
+## /usr/lib/anon-ws-disable-stacked-tor/socat-unix-sockets parses this.
 ## Start and stop is up to the anon-ws-disable-stacked-tor systemd service.
 
 ## GATEWAY_IP: No need to set GATEWAY_IP. (Gets set by calling script
@@ -18,8 +59,6 @@
 ## sudo service anon-ws-disable-stacked-tor start
 ## sudo service anon-ws-disable-stacked-tor restart
 ## sudo service anon-ws-disable-stacked-tor status
-
-## bash fragment
 
 #[ -n "$pre_command" ] || pre_command=""
 
