--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -16,6 +16,10 @@
 
 ## /usr/share/anon-ws-disable-stacked-tor/systemd-unit-files-generator parses this.
 
+## Usage:
+## 1) Create and extend config file /etc/anon-ws-disable-stacked-tor.d/50_user.conf
+## 2) Run /usr/share/anon-ws-disable-stacked-tor/systemd-unit-files-generator
+
 ## Redirect Whonix-Workstation port 9050 to Whonix-Gateway port 9050 and so forth.
 file_port_tuples+=" port#9050:9050 " ## system Tor default SocksPort
 file_port_tuples+=" port#9150:9151 " ## Tor Browser Bundle default SocksPort
