--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -18,7 +18,8 @@
 
 ## Usage:
 ## 1) Create and extend config file /etc/anon-ws-disable-stacked-tor.d/50_user.conf
-## 2) Run /usr/share/anon-ws-disable-stacked-tor/systemd-unit-files-generator
+## 2) Run:
+## sudo /usr/share/anon-ws-disable-stacked-tor/systemd-unit-files-generator
 
 ## Redirect Whonix-Workstation port 9050 to Whonix-Gateway port 9050 and so forth.
 file_port_tuples+=" port#9050:9050 " ## system Tor default SocksPort
