also set up i2p sockets if  is set =true

--- a/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
+++ b/etc/anon-ws-disable-stacked-tor.d/30_anon-dist.conf
@@ -88,3 +88,25 @@ file_port_tuples+=" /var/run/tor/control#9051 "
 ## SIGNAL NEWNYM
 ## <enter>
 ## 250 OK
+
+#########
+## i2p  #
+#########
+
+##These add socket activation capabilities for the i2p network, to enable more
+##secure interation with applications that work with Unix Sockets, including
+##the Tor Browser Bundle
+
+if [ "$i2p" = "true" ]; then
+    file_port_tuples+=" port#4444:4444 " ## system i2p default HttpPort
+    file_port_tuples+=" port#4447:4447 " ## system i2p default SocksPort
+    file_port_tuples+=" port#7656:7656 " ## system i2p default HttpPort
+
+    file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_4444.sock#4444 "
+    file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_4447.sock#4447 "
+    file_port_tuples+=" /var/run/anon-ws-disable-stacked-tor/127.0.0.1_7656.sock#7656 "
+
+    file_port_tuples+=" /var/run/i2p/http#4444 "
+    file_port_tuples+=" /var/run/i2p/socks#4447 "
+    file_port_tuples+=" /var/run/i2p/sam#7656 "
+fi
